# llame-worker-ts

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/src/: EngineBinding.cpp  EngineBinding.h  addon.cpp
example/: index.js
scripts/: install.js
src/: index.ts
